--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "react25-dynamic-routes",
+  "name": "react-dynamic-routes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
+    "formik": "^2.1.4",
     "node-sass": "^4.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.3"
   },
